get rid of google's Immutable data structures in favor of Java's new ones